Imagen en Public

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,7 +5,10 @@
     [formGroup]="myForm"
     (ngSubmit)="login()"
   >
-    <h1 class="login-form-title">Login</h1>
+    <img appBrokenImage src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToiVM71fr9KYbkrr597N9i3FuTAVayyD1n5g&s" alt="logo-fray"
+    style="margin: 20px;">
+
+    <h1 class="login-form-title">LOGIN</h1>
 
     <div class="wrap-input m-b">
       <span class="label-input">Email</span>
