--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,6 +5,9 @@
       [formGroup]="myForm"
       (ngSubmit)="register()"
     >
+    <img appBrokenImage src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToiVM71fr9KYbkrr597N9i3FuTAVayyD1n5g&s" alt="logo-fray"
+    style="margin: 20px;">
+
       <h1 class="login-form-title">REGISTRO</h1>
 
       <div class="wrap-input m-b">
