Llenar personajes con api

--- a/src/app/pages/characteres/characteres.component.html
+++ b/src/app/pages/characteres/characteres.component.html
@@ -1,1 +1,22 @@
-<p>characteres works!</p>
+<hr />
+<h1>PERSONAJES</h1>
+
+<div class="characteres-container">
+  <div
+    class="characteres-container__item text-center"
+    *ngFor="let character of characteres$ | async"
+  >
+    <h4>
+      {{
+        character.name.length < 12
+          ? character.name
+          : (character.name | slice : 0 : 12)
+      }}
+    </h4>
+    <img [src]="character.image" [alt]="character.name" appImgBroken />
+    <p class="mt-1 mb-0 text-success status">
+      {{ character.status }}
+    </p>
+    <a class="btn btn-primary mb-5" (click)="addFavorite(character)"> ADD </a>
+  </div>
+</div>
