--- a/src/app/pages/favorites/favorites.component.html
+++ b/src/app/pages/favorites/favorites.component.html
@@ -1,1 +1,20 @@
-<p>favorites works!</p>
+<hr />
+<h1>PERSONAJES FAVORITOS</h1>
+
+<div class="characteres-container">
+  <div
+    class="characteres-container__item text-center"
+    *ngFor="let character of favorites$ | async"
+  >
+    <h4>
+      {{
+        character.nameCharacter.length < 12
+          ? character.nameCharacter
+          : (character.nameCharacter | slice : 0 : 12)
+      }}
+    </h4>
+    <img [src]="character.caracterUrlImagen" [alt]="character.nameCharacter" appImgBroken />
+
+    <a class="btn btn-primary mb-5" (click)="deleteFavorite(character)"> DELETE </a>
+  </div>
+</div>
